; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/pktsched/extr_pktsched.c_pktsched_get_pkt_sfb_vars.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/pktsched/extr_pktsched.c_pktsched_get_pkt_sfb_vars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }
%struct.mbuf = type { %struct.pkthdr }
%struct.pkthdr = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @pktsched_get_pkt_sfb_vars(%struct.TYPE_3__* %0, i32** %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.mbuf*, align 8
  %7 = alloca %struct.pkthdr*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32** %1, i32*** %4, align 8
  store i32* null, i32** %5, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  switch i32 %10, label %25 [
    i32 128, label %11
  ]

11:                                               ; preds = %2
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.mbuf*
  store %struct.mbuf* %15, %struct.mbuf** %6, align 8
  %16 = load %struct.mbuf*, %struct.mbuf** %6, align 8
  %17 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %16, i32 0, i32 0
  store %struct.pkthdr* %17, %struct.pkthdr** %7, align 8
  %18 = call i32 @_CASSERT(i32 1)
  %19 = call i32 @_CASSERT(i32 1)
  %20 = load %struct.pkthdr*, %struct.pkthdr** %7, align 8
  %21 = getelementptr inbounds %struct.pkthdr, %struct.pkthdr* %20, i32 0, i32 1
  %22 = load i32**, i32*** %4, align 8
  store i32* %21, i32** %22, align 8
  %23 = load %struct.pkthdr*, %struct.pkthdr** %7, align 8
  %24 = getelementptr inbounds %struct.pkthdr, %struct.pkthdr* %23, i32 0, i32 0
  store i32* %24, i32** %5, align 8
  br label %27

25:                                               ; preds = %2
  %26 = call i32 @VERIFY(i32 0)
  br label %27

27:                                               ; preds = %25, %11
  %28 = load i32*, i32** %5, align 8
  ret i32* %28
}

declare dso_local i32 @_CASSERT(i32) #1

declare dso_local i32 @VERIFY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
